# git-fzf

./: .gitignore  LICENSE  Makefile  README.md  justfile  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py
commands/: git-iadd  git-icommit  git-idiff  git-idifftool  git-ireset  git-irestore  git-iswitch
git_fzf/commands/: add.py  commit.py  diff.py  difftool.py  reset.py  restore.py  switch.py
git_fzf/lib/templates/: InteractiveCommitCommand.py  InteractiveDiffLikeCommand.py  InteractiveDifftoolCommand.py  InteractiveResetCommand.py
git_fzf/lib/utils/: shell.py
media/: README.md
src/: git-idiff  git-idifftool  utils
src/commands/: add  commit  diff  difftool  git-iadd  git-icommit  git-idiff  git-idifftool  git-ireset  git-irestore  git-iswitch  reset  restore  switch
src/commands/lib/: InteractiveAddCommand.py  InteractiveCommand.py  InteractiveCommitCommand.py  InteractiveDiffCommand.py  InteractiveDiffLikeCommand.py  InteractiveDifftoolCommand.py  InteractiveResetCommand.py  InteractiveRestoreCommand.py  InteractiveSwitchCommand.py
src/commands/lib/utils/: fzf.py  git.py
src/git_fzf/commands/: add.py  diff.py  reset.py  restore.py
src/git_fzf/lib/templates/: InteractiveAddCommand.py  InteractiveCommand.py  InteractiveDiffCommand.py  InteractiveRestoreCommand.py  InteractiveSwitchCommand.py
src/git_fzf/lib/utils/: errors.py
src/lib/git_fzf/templates/: InteractiveAddCommand.py  InteractiveCommand.py  InteractiveCommitCommand.py  InteractiveDiffCommand.py  InteractiveDiffLikeCommand.py  InteractiveDifftoolCommand.py  InteractiveResetCommand.py  InteractiveRestoreCommand.py  InteractiveSwitchCommand.py
src/lib/git_fzf/utils/: runtime.py
utils/: get-client  handle-startup
