[project]
name = "git-fzf"
version = "0.0.2"
description = "Interactive versions of built-in Git commands using fzf"
authors = [{ name = "John Karahalis", email = "john@johnkarahalis.com" }]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "MIT"
keywords = [
    "git",
    "fzf",
    "cli",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["pyfzf==0.2.2"]

[project.urls]
Homepage = "https://github.com/openjck/git-fzf"
Repository = "https://github.com/openjck/git-fzf"
Documentation = "https://github.com/openjck/git-fzf#usage"

[project.scripts]
git-iadd = "git_fzf.commands.add:run"
git-icommit = "git_fzf.commands.commit:run"
git-idiff = "git_fzf.commands.diff:run"
git-idifftool = "git_fzf.commands.difftool:run"
git-ireset = "git_fzf.commands.reset:run"
git-irestore = "git_fzf.commands.restore:run"
git-iswitch = "git_fzf.commands.switch:run"

[dependency-groups]
dev = [
    "black>=26.3.1",
    "flake8>=5.0.4,<6",
    "isort>=5.13.2",
    "pyclean>=2.2.0,<3",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.black]
line-length = 79

# Make isort and black agree on formatting of imports, so that they don't undo
# each other's work.
[tool.isort]
profile = "black"
